iptables-configs/iptables.save
# Generated by iptables-save v1.4.21 on Mon Feb 22 08:54:39 2016
*mangle
:PREROUTING ACCEPT [525005:311267711]
:INPUT ACCEPT [60590:5517570]
:FORWARD ACCEPT [461921:304990739]
:OUTPUT ACCEPT [65610:76716988]
:POSTROUTING ACCEPT [527531:381707727]
COMMIT
# Completed on Mon Feb 22 08:54:39 2016
# Generated by iptables-save v1.4.21 on Mon Feb 22 08:54:39 2016
*nat
:PREROUTING ACCEPT [12368:1972994]
:INPUT ACCEPT [4639:486228]
:OUTPUT ACCEPT [3536:280219]
:POSTROUTING ACCEPT [78:5278]
 -A PREROUTING -i em2 -p tcp -m tcp --dport 5001 -j DNAT --to-destination 192.168.0.156:5001
 -A PREROUTING -i em2 -p tcp -m tcp --dport 8001 -j DNAT --to-destination 192.168.0.156:8001
 -A PREROUTING -i em2 -p tcp -m tcp --dport 8555 -j DNAT --to-destination 192.168.0.156:8555
 -A PREROUTING -i em2 -p tcp -m tcp --dport 5002 -j DNAT --to-destination 192.168.0.166:5002
 -A PREROUTING -i em2 -p tcp -m tcp --dport 8002 -j DNAT --to-destination 192.168.0.166:8002
 -A PREROUTING -i em2 -p tcp -m tcp --dport 8556 -j DNAT --to-destination 192.168.0.166:8556
 -A PREROUTING -i em2 -p tcp -m tcp --dport 5003 -j DNAT --to-destination 192.168.0.176:5003
 -A PREROUTING -i em2 -p tcp -m tcp --dport 8003 -j DNAT --to-destination 192.168.0.176:8003
 -A PREROUTING -i em2 -p tcp -m tcp --dport 8557 -j DNAT --to-destination 192.168.0.176:8557
 -A PREROUTING -i em2 -p tcp -m tcp --dport 5022 -j DNAT --to-destination 192.168.27.50:22
 -A POSTROUTING -o em+ -j MASQUERADE
COMMIT
# Completed on Mon Feb 22 08:54:39 2016
# Generated by iptables-save v1.4.21 on Mon Feb 22 08:54:39 2016
*filter
:OUTPUT ACCEPT [0:0]
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i tun0 -j ACCEPT
-A INPUT -i em+ -j ACCEPT
-A INPUT -i em+ -p udp -m udp -m state --dport 5353 --state NEW -j DROP
-A INPUT -p udp -m udp -m state --dport 1194 --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp -m state --dport 22 --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp -m state --dport 10000 --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp -m state --dport 5001:5003 --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp -m state --dport 8001:8003 --state NEW -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -i lo -j ACCEPT
-A FORWARD -i tun0 -j ACCEPT
-A FORWARD -i em1 -j ACCEPT
-A FORWARD -i em1.20 -j ACCEPT
-A FORWARD -i em1.30 -j ACCEPT
-A FORWARD -i em1.40 -j ACCEPT
-A FORWARD -i em1.50 -j ACCEPT
-A FORWARD -o em1 -j ACCEPT
-A FORWARD -o em1.20 -j ACCEPT
-A FORWARD -o em1.30 -j ACCEPT
-A FORWARD -o em1.40 -j ACCEPT
-A FORWARD -o em1.50 -j ACCEPT
-A FORWARD -o em2 -j ACCEPT
-A FORWARD -m conntrack -i em2 -o em1 -j ACCEPT  --ctstate RELATED,ESTABLISHED 
-A FORWARD -m conntrack -i em2 -o em1.20 -j ACCEPT  --ctstate RELATED,ESTABLISHED 
-A FORWARD -m conntrack -i em2 -o em1.30 -j ACCEPT  --ctstate RELATED,ESTABLISHED 
-A FORWARD -m conntrack -i em2 -o em1.40 -j ACCEPT  --ctstate RELATED,ESTABLISHED 
-A FORWARD -m conntrack -i em2 -o em1.50 -j ACCEPT  --ctstate RELATED,ESTABLISHED 
-A FORWARD -p tcp -m tcp -m state -d 192.168.0.156/32 -i em2 --dport 5001 --state NEW -j ACCEPT
-A FORWARD -p tcp -m tcp -m state -d 192.168.0.156/32 -i em2 --dport 8001 --state NEW -j ACCEPT
-A FORWARD -p tcp -m tcp -m state -d 192.168.0.156/32 -i em2 --dport 8555 --state NEW -j ACCEPT
-A FORWARD -p tcp -m tcp -m state -d 192.168.0.166/32 -i em2 --dport 5002 --state NEW -j ACCEPT
-A FORWARD -p tcp -m tcp -m state -d 192.168.0.166/32 -i em2 --dport 8002 --state NEW -j ACCEPT
-A FORWARD -p tcp -m tcp -m state -d 192.168.0.166/32 -i em2 --dport 8556 --state NEW -j ACCEPT
-A FORWARD -p tcp -m tcp -m state -d 192.168.0.176/32 -i em2 --dport 5003 --state NEW -j ACCEPT
-A FORWARD -p tcp -m tcp -m state -d 192.168.0.176/32 -i em2 --dport 8003 --state NEW -j ACCEPT
-A FORWARD -p tcp -m tcp -m state -d 192.168.0.176/32 -i em2 --dport 8557 --state NEW -j ACCEPT
-A FORWARD -j LOG
-A INPUT -p tcp -m tcp -m state --dport 8555:8557 --state NEW -j ACCEPT
COMMIT
# Completed on Mon Feb 22 08:54:39 2016
